# agent-evaluation-harness

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: eval.yml
datasets/: adversarial.yaml  known_good.yaml  support_triage.yaml
harness/: dataset.py  reporter.py  runner.py  scorer.py
tests/: run_dataset.py  runner_agent_test.py  test_eval.py  test_mock.py  tests.ipynb
