[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai-agents>=0.0.7",
    "python-dotenv>=1.0"
]
name = "agent_eval_harness"
version = "0.0.1"
authors = [
  { name="Matt Sikes", email="matt@matt-sikes.com" },
]
description = "An AI Agent Evaluation Harness"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["code"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/emsikes/agent-evaluation-harness"